# hello-java-docker-image

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
src/: BUILD.bazel
src/main/: HelloService.java
